--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>yo im not gay but i love the gays</title>
+    <style>
+        body {
+            background-color: #FF69B4; /* Hot pink background */
+            color: #00FFFF; /* Bright cyan text */
+            font-family: 'Comic Sans MS', cursive, sans-serif;
+            text-align: center;
+            padding-top: 20%;
+        }
+
+        h1 {
+            font-size: 5em;
+            text-shadow: 2px 2px #FFD700, 4px 4px #FF4500; /* Gold and orange shadow */
+            animation: rainbow 5s infinite alternate;
+        }
+
+        @keyframes rainbow {
+            0% { color: #FF0000; } /* Red */
+            15% { color: #FF7F00; } /* Orange */
+            30% { color: #FFFF00; } /* Yellow */
+            45% { color: #00FF00; } /* Green */
+            60% { color: #0000FF; } /* Blue */
+            75% { color: #4B0082; } /* Indigo */
+            90% { color: #8B00FF; } /* Violet */
+            100% { color: #FF0000; } /* Back to Red */
+        }
+    </style>
+</head>
+<body>
+    <h1>Hello World</h1>
+</body>
+</html>
