--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>yo im not gay but i love the gays</title>
+    <title>gang money maker syndrome</title>
     <style>
         body {
             background-color: #FF69B4; /* Hot pink background */
-            color: #00FFFF; /* Bright cyan text */
             font-family: 'Comic Sans MS', cursive, sans-serif;
             text-align: center;
-            padding-top: 20%;
+            padding-top: 10%;
+            overflow: hidden; /* Prevent scrollbars from flashing elements */
         }
 
         h1 {
             font-size: 5em;
             text-shadow: 2px 2px #FFD700, 4px 4px #FF4500; /* Gold and orange shadow */
-            animation: rainbow 5s infinite alternate;
+            animation: rainbow 2s infinite alternate, flash 0.5s infinite alternate;
         }
 
         @keyframes rainbow {
@@ -29,9 +29,62 @@
             90% { color: #8B00FF; } /* Violet */
             100% { color: #FF0000; } /* Back to Red */
         }
+
+        @keyframes flash {
+            0% { opacity: 1; }
+            100% { opacity: 0; }
+        }
+
+        .light {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            animation: move 5s linear infinite, colorChange 1s infinite alternate;
+        }
+
+        @keyframes move {
+            0% { transform: translate(0, 0); }
+            100% { transform: translate(100vw, 100vh); }
+        }
+
+        @keyframes colorChange {
+            0% { background-color: #FF0000; }
+            20% { background-color: #FF7F00; }
+            40% { background-color: #FFFF00; }
+            60% { background-color: #00FF00; }
+            80% { background-color: #0000FF; }
+            100% { background-color: #8B00FF; }
+        }
+
+        /* Generate multiple flashing lights */
+        .light:nth-child(1) { animation-delay: 0s; }
+        .light:nth-child(2) { animation-delay: 0.5s; }
+        .light:nth-child(3) { animation-delay: 1s; }
+        .light:nth-child(4) { animation-delay: 1.5s; }
+        .light:nth-child(5) { animation-delay: 2s; }
+        .light:nth-child(6) { animation-delay: 2.5s; }
+        .light:nth-child(7) { animation-delay: 3s; }
+        .light:nth-child(8) { animation-delay: 3.5s; }
+        .light:nth-child(9) { animation-delay: 4s; }
+        .light:nth-child(10) { animation-delay: 4.5s; }
     </style>
 </head>
 <body>
+    <h1>Hello World</h1>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+    <div class="light"></div>
+</body>
+</html>
+
     <h1>Hello World</h1>
 </body>
 </html>
