--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gang money maker syndrome</title>
+    <title>Hello World - 1990s Style</title>
     <style>
         body {
             background-color: #FF69B4; /* Hot pink background */
@@ -45,7 +45,10 @@
 
         @keyframes move {
             0% { transform: translate(0, 0); }
-            100% { transform: translate(100vw, 100vh); }
+            25% { transform: translate(50vw, 25vh); }
+            50% { transform: translate(100vw, 50vh); }
+            75% { transform: translate(50vw, 75vh); }
+            100% { transform: translate(0, 100vh); }
         }
 
         @keyframes colorChange {
@@ -68,6 +71,32 @@
         .light:nth-child(8) { animation-delay: 3.5s; }
         .light:nth-child(9) { animation-delay: 4s; }
         .light:nth-child(10) { animation-delay: 4.5s; }
+
+        .star {
+            position: absolute;
+            width: 30px;
+            height: 30px;
+            background: radial-gradient(circle, #FFF700, #FF0000);
+            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+            animation: spin 3s linear infinite, flash 1s infinite alternate;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Generate multiple flashing stars */
+        .star:nth-child(1) { animation-delay: 0s; }
+        .star:nth-child(2) { animation-delay: 0.3s; }
+        .star:nth-child(3) { animation-delay: 0.6s; }
+        .star:nth-child(4) { animation-delay: 0.9s; }
+        .star:nth-child(5) { animation-delay: 1.2s; }
+        .star:nth-child(6) { animation-delay: 1.5s; }
+        .star:nth-child(7) { animation-delay: 1.8s; }
+        .star:nth-child(8) { animation-delay: 2.1s; }
+        .star:nth-child(9) { animation-delay: 2.4s; }
+        .star:nth-child(10) { animation-delay: 2.7s; }
     </style>
 </head>
 <body>
@@ -82,6 +111,16 @@
     <div class="light"></div>
     <div class="light"></div>
     <div class="light"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
+    <div class="star"></div>
 </body>
 </html>
 
