--- a/index.html
+++ b/index.html
@@ -3,127 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World - 1990s Style</title>
+    <title>Gangster Money Maker Syndrome</title>
     <style>
         body {
-            background-color: #FF69B4; /* Hot pink background */
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background-color: black;
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
             text-align: center;
-            padding-top: 10%;
-            overflow: hidden; /* Prevent scrollbars from flashing elements */
         }
-
-        h1 {
-            font-size: 5em;
-            text-shadow: 2px 2px #FFD700, 4px 4px #FF4500; /* Gold and orange shadow */
-            animation: rainbow 2s infinite alternate, flash 0.5s infinite alternate;
+        .gangster-text {
+            font-size: 50px;
+            font-weight: bold;
+            color: gold;
+            text-shadow: 2px 2px 5px purple, 2px 2px 10px red;
+            border: 5px solid limegreen;
+            padding: 20px;
+            background: linear-gradient(45deg, black, darkgreen);
+            border-radius: 15px;
+            box-shadow: 0 0 15px limegreen, 0 0 25px red;
+            transform: rotate(-5deg);
         }
-
-        @keyframes rainbow {
-            0% { color: #FF0000; } /* Red */
-            15% { color: #FF7F00; } /* Orange */
-            30% { color: #FFFF00; } /* Yellow */
-            45% { color: #00FF00; } /* Green */
-            60% { color: #0000FF; } /* Blue */
-            75% { color: #4B0082; } /* Indigo */
-            90% { color: #8B00FF; } /* Violet */
-            100% { color: #FF0000; } /* Back to Red */
-        }
-
-        @keyframes flash {
-            0% { opacity: 1; }
-            100% { opacity: 0; }
-        }
-
-        .light {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            animation: move 5s linear infinite, colorChange 1s infinite alternate;
-        }
-
-        @keyframes move {
-            0% { transform: translate(0, 0); }
-            25% { transform: translate(50vw, 25vh); }
-            50% { transform: translate(100vw, 50vh); }
-            75% { transform: translate(50vw, 75vh); }
-            100% { transform: translate(0, 100vh); }
-        }
-
-        @keyframes colorChange {
-            0% { background-color: #FF0000; }
-            20% { background-color: #FF7F00; }
-            40% { background-color: #FFFF00; }
-            60% { background-color: #00FF00; }
-            80% { background-color: #0000FF; }
-            100% { background-color: #8B00FF; }
-        }
-
-        /* Generate multiple flashing lights */
-        .light:nth-child(1) { animation-delay: 0s; }
-        .light:nth-child(2) { animation-delay: 0.5s; }
-        .light:nth-child(3) { animation-delay: 1s; }
-        .light:nth-child(4) { animation-delay: 1.5s; }
-        .light:nth-child(5) { animation-delay: 2s; }
-        .light:nth-child(6) { animation-delay: 2.5s; }
-        .light:nth-child(7) { animation-delay: 3s; }
-        .light:nth-child(8) { animation-delay: 3.5s; }
-        .light:nth-child(9) { animation-delay: 4s; }
-        .light:nth-child(10) { animation-delay: 4.5s; }
-
-        .star {
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            background: radial-gradient(circle, #FFF700, #FF0000);
-            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
-            animation: spin 3s linear infinite, flash 1s infinite alternate;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        /* Generate multiple flashing stars */
-        .star:nth-child(1) { animation-delay: 0s; }
-        .star:nth-child(2) { animation-delay: 0.3s; }
-        .star:nth-child(3) { animation-delay: 0.6s; }
-        .star:nth-child(4) { animation-delay: 0.9s; }
-        .star:nth-child(5) { animation-delay: 1.2s; }
-        .star:nth-child(6) { animation-delay: 1.5s; }
-        .star:nth-child(7) { animation-delay: 1.8s; }
-        .star:nth-child(8) { animation-delay: 2.1s; }
-        .star:nth-child(9) { animation-delay: 2.4s; }
-        .star:nth-child(10) { animation-delay: 2.7s; }
     </style>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="light"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-    <div class="star"></div>
-</body>
-</html>
-
-    <h1>Hello World</h1>
+    <div class="gangster-text">Gangster Money Maker Syndrome</div>
 </body>
 </html>
