--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     </style>
 </head>
 <body>
-    <div class="gangster-text">Gangster Money Maker Syndrome</div>
+    <div class="gangster-text">
+        <a href="http://www.calderlol.com">Gangster</a>
+        Money Maker Syndrome
+    </div>
 </body>
 </html>
