--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             box-shadow: 0 0 15px limegreen, 0 0 25px red;
             transform: rotate(-5deg);
         }
+        a {
+            color: gold;
+        }
     </style>
 </head>
 <body>
