--- a/index.html
+++ b/index.html
@@ -30,13 +30,17 @@
         }
         a {
             color: gold;
+            text-decoration: none;
+            display: inline;
         }
     </style>
 </head>
 <body>
     <div class="gangster-text">
-        <a href="http://www.calderlol.com">Gangster</a>
-        Money Maker Syndrome
+        <a href="https://open.spotify.com/artist/3rfH5SRk6ekMfiBZ5KVYw9">Gangster</a>
+        <a href="https://soundcloud.com/00calder">Money</a>
+        <a href="https://www.instagram.com/00calder">Maker</a>
+        <a href="https://x.com/00calder">Syndrome</a>
     </div>
 </body>
 </html>
